2020-09-03  Mark Wielaard  <mark@klomp.org>

	* libdw.map (ELFUTILS_0.126): Remove local wildcard.
	(ELFUTILS_0.127): Likewise.
	(ELFUTILS_0.130): Likewise.
	(ELFUTILS_0.136): Likewise.
	(ELFUTILS_0.138): Likewise.

2020-08-25  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (check_constant_offset): Rename to...
	(is_constant_offset): .. this.

2020-06-28  Mark Wielaard  <mark@klomp.org>

	* linux-kernel-modules.c (intuit_kernel_bounds): Check read_address
	returns an increasing address when searching for end.

2020-06-16  Mark Wielaard  <mark@klomp.org>

	* cfi.c (execute_cfi): Add missing FALLTHROUGH.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* libdw_visit_scopes.c (walk_children): Don't recurse into imported
	DW_TAG_compile_units.

2020-05-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_decl_file.c (dwarf_decl_file): Use attr CU instead of DIE
	CU to resolve file name.
	* dwarf_ranges.c(dwarf_ranges): Document which CU we use when.
	* libdw.h (dwarf_attr_integrate): Extend documentation.

2020-04-25  Mark Wielaard  <mark@klomp.org>

	* libdw_alloc.c (__libdw_alloc_tail): Call Dwarf oom_handler()
	when malloc fails.

2020-04-17  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (check_section): Handle .gnu.debuglto_ prefix.

2019-10-28  Aaron Merey  <amerey@redhat.com>

	* Makefile.am (libdw_so_LDLIBS): Add -ldl for libdebuginfod.so dlopen.

2019-11-10  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (libdw_unalloc): New define.
	(libdw_typed_unalloc): Likewise.
	(__libdw_thread_tail): New function declaration.
	* libdw_alloc.c (__libdw_thread_tail): New function.
	* dwarf_getabbrev.c (__libdw_getabbrev): Call libdw_typed_unalloc
	when reading invalid data or when hash collission detected.

2019-10-28  Jonathon Anderson  <jma14@rice.edu>

	* libdw_alloc.c: Added __libdw_alloc_tail.
	(__libdw_allocate): Switch to use the mem_tails array.
	* libdwP.h (Dwarf): Likewise.
	* dwarf_begin_elf.c (dwarf_begin_elf): Support for above.