@@ -57,6 +57,11 @@ dwarf_getcfi (Dwarf *dbg)
       cfi->datarel = 0;
 
       cfi->e_ident = (unsigned char *) elf_getident (dbg->elf, NULL);
+
+      GElf_Ehdr ehdr;
+      gelf_getehdr (dbg->elf, &ehdr);
+      cfi->e_machine = ehdr.e_machine;
+
       cfi->other_byte_order = dbg->other_byte_order;
       cfi->default_same_value = false;
 
