@@ -1,5 +1,11 @@
 2020-09-03  Mark Wielaard  <mark@klomp.org>
 
+	* run-readelf-frames.sh: New test.
+	* Makefile.am (TESTS): Add run-readelf-frames.sh.
+	(EXTRA_DIST): Likewise.
+
+2020-09-03  Mark Wielaard  <mark@klomp.org>
+
 	* testfile-gnu-property-note-aarch64.bz2: New file.
 	* run-readelf-n.sh: Handle testfile-gnu-property-note-aarch64.
 	* Makefile.am (EXTRA_DIST): Add
